force-app/main/default/objects/OrelRequestTracking__c/OrelRequestTracking__c.object-meta.xml
<CustomObject>
    <description>All the Distributor requests will be tracked here.</description>
    <label>OrelRequestTracking</label>
    <nameField>
        <displayFormat>Req-{000000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrelRequestTracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>