force-app/main/default/objects/OrelRequestTracking__c/fields/Accoun_Owner__c.field-meta.xml
<CustomField>
    <fullName>Accoun_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OrelRequestTracking</relationshipName>
    <type>Lookup</type>
</CustomField>