force-app/main/default/objects/OrelRequestTracking__c/fields/Approver_responded__c.field-meta.xml
<CustomField>
    <fullName>Approver_responded__c</fullName>
    <formula>OR(
    ISPICKVAL(OrelStatus__c, &apos;Request Approved&apos;),
    ISPICKVAL(OrelStatus__c, &apos;Request Rejected&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver responded</label>
    <type>Checkbox</type>
</CustomField>