force-app/main/default/objects/OrelRequestTracking__c/fields/Orel_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Orel_Initiated_By__c</fullName>
    <label>Orel Initiated By</label>
    <length>64</length>
    <type>Text</type>
</CustomField>