force-app/main/default/objects/OrelRequestTracking__c/fields/Orel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Orel_Reason__c</fullName>
    <label>Orel Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>