force-app/main/default/objects/OrelRequestTracking__c/fields/orelDeboardingStatus__c.field-meta.xml
<CustomField>
    <fullName>orelDeboardingStatus__c</fullName>
    <label>orelDeboardingStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deboarding Initiated</fullName>
            </value>
            <value>
                <fullName>In Process - Working with Reconciliation &amp; Full and Final Settlement</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>