force-app/main/default/objects/OrelRequestTracking__c/fields/OrelStatus__c.field-meta.xml
<CustomField>
    <fullName>OrelStatus__c</fullName>
    <label>OrelStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deboard initiated</fullName>
            </value>
            <value>
                <fullName>Request Approved</fullName>
            </value>
            <value>
                <fullName>Request Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>