force-app/main/default/objects/OrelRequestTracking__c/listViews/Approval_queue_OrelRequestTracking.listView-meta.xml
<ListView>
    <fullName>Approval_queue_OrelRequestTracking</fullName>
    <filterScope>Queue</filterScope>
    <label>Approval queue</label>
    <queue>Approval_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>